platform/policies/tests/restrict-tenant-claim-creation/crossplane-update-exempt/userinfo.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: UserInfo
metadata:
  name: crossplane-controller
userInfo:
  username: "system:serviceaccount:crossplane-system:crossplane"
  groups:
    - system:serviceaccounts
    - system:serviceaccounts:crossplane-system
